feat: Implement JWT refresh token functionality, add global exception handling, refactor DTOs, and introduce OpenAPI configuration and data seeding.